after login and logout changes and menu changes based on user login

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,11 @@
     </style>
 </head>
 <body>
-    <app>Loading...</app>
+    <app>
+        <div class="preloader">
+            <div class="preloader_image"></div>
+        </div>
+    </app>
 </body>
 </html>
 
